clusters/titania/apps/glance/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
  name: glance
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: glance
      app.kubernetes.io/name: glance
  template:
    metadata:
      annotations:
        secret.reloader.stakater.com/reload: glance-secret-vault
      labels:
        app.kubernetes.io/instance: glance
        app.kubernetes.io/name: glance
    spec:
      containers:
      - image: glanceapp/glance:v0.8.6
        imagePullPolicy: IfNotPresent
        name: glance
        volumeMounts:
        - name: glance-config
          mountPath: /app/config
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: glance-config
        configMap:
          name: glance-config
