clusters/titania/apps/glance/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
  name: glance-ingress
spec:
  tls:
  - hosts:
    - "*.cosmos.cboxlab.com"
    secretName: cosmos-cboxlab-cert
  rules:
  - host: glance.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glance
            port:
              name: http
